[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Laser.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Characters/ufoTemp.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 20.0

[sub_resource type="Gradient" id=2]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]

flags = 4
gradient = SubResource( 2 )
width = 2048

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 2
emission_shape = 1
emission_sphere_radius = 1.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
initial_velocity_random = 1.0
angular_velocity = 2.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 2.0
linear_accel_random = 0.2
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 1.0
damping_random = 0.5
angle = 45.0
angle_random = 1.0
scale = 2.0
scale_random = 0.5
color_ramp = SubResource( 3 )
hue_variation = 1.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Color", "Damping", "Emission Shape", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Scale", "Spread", "Trail" ]

[node name="Player" type="Area2D"]

position = Vector2( -0.538559, 0.618938 )
scale = Vector2( 0.5, 0.7 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Material", "Pickable", "Transform", "Visibility", "collision" ]
Laser = ExtResource( 2 )
speed = 200

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( -0.111805, -0.419384 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -0.395119, 0.097239 )
scale = Vector2( 5.60283, 0.514356 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Tween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="ShootPos" type="Node" parent="." index="3"]

_sections_unfolded = [ "Transform" ]

[node name="ShootTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="Trail" type="Particles2D" parent="." index="5"]

modulate = Color( 1, 1, 1, 0.473412 )
show_behind_parent = true
scale = Vector2( 10, 1 )
emitting = false
amount = 10
lifetime = 2.5
one_shot = false
preprocess = 0.0
speed_scale = 2.0
explosiveness = 0.0
randomness = 1.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 4 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform", "Visibility" ]

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]


